--- a/PetProject/PetProject.csproj
+++ b/PetProject/PetProject.csproj
@@ -196,6 +196,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Albums1Controller.cs" />
+    <Compile Include="Controllers\AlbumsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\QueryController.cs" />
@@ -222,6 +224,7 @@
     <Compile Include="Models\Artist.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Picture.cs" />
     <Compile Include="Models\Play.cs" />
     <Compile Include="Models\Playlist.cs" />
     <Compile Include="Models\QueryContext.cs" />
@@ -244,6 +247,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="mp3\test1.mp3" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -263,6 +267,13 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Views\mp3\test1.mp3" />
+    <Content Include="Views\Songs1\dewplayer-vol.swf" />
+    <Content Include="Views\Songs1\mp3\test1.mp3" />
+    <EmbeddedResource Include="Views\Songs1\test1.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <BrowseToURL>~/Ratings/test1.mp3</BrowseToURL>
+    </EmbeddedResource>
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -329,9 +340,16 @@
     <Content Include="Views\Songs1\Index.cshtml" />
     <Content Include="Views\Query\Index.cshtml" />
     <Content Include="Views\Trends\Index.cshtml" />
+    <Content Include="Views\Albums1\Create.cshtml" />
+    <Content Include="Views\Albums1\Delete.cshtml" />
+    <Content Include="Views\Albums1\Details.cshtml" />
+    <Content Include="Views\Albums1\Edit.cshtml" />
+    <Content Include="Views\Albums1\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\images\" />
+    <Folder Include="Views\Album\" />
     <Folder Include="Views\Rating\" />
   </ItemGroup>
   <ItemGroup>
