--- a/PetProject/PetProject.csproj
+++ b/PetProject/PetProject.csproj
@@ -345,6 +345,7 @@
     <Content Include="Views\Albums1\Details.cshtml" />
     <Content Include="Views\Albums1\Edit.cshtml" />
     <Content Include="Views\Albums1\Index.cshtml" />
+    <Content Include="Views\Query\Index2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
